tests/snapshots/parse_errors__missing_primary.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print ();
   │        ┬  
   │        ╰── Expected primary
───╯



